# pixa

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.ja.md  README.md  dist-workspace.toml  docker-compose.yml  release-plz.toml
.github/workflows/: ci.yml  release-plz.yml  release.yml
assets/skills/pixa/: SKILL.md
config/: diagram.toml  edit.toml  icon.toml  image.toml  pattern.toml  restore.toml  story.toml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: compress.rs  convert.rs  info.rs  lib.rs  prompt.rs  remove_bg.rs  watermark.rs
crates/core/src/generate/: client.rs  config.rs  error.rs  mod.rs  operations.rs  prompt_builder.rs  types.rs
crates/web/: Cargo.toml
crates/web/src/: main.rs
crates/web/static/: index.html
docs/: tech.md
src/: compress.rs  convert.rs  favicon.rs  info.rs  lib.rs  main.rs  split.rs  transparent.rs  watermark.rs
src/clipboard/: arboard_impl.rs  macos.rs  mod.rs
src/commands/: completions.rs  compress.rs  convert.rs  detect.rs  error.rs  favicon.rs  info.rs  input.rs  install.rs  mod.rs  paste.rs  remove_watermark.rs  split.rs  style.rs  transparent.rs
tests/: cli_clipboard.rs  cli_completions.rs  cli_compress.rs  cli_convert.rs  cli_favicon.rs  cli_info.rs  cli_install.rs  cli_split.rs  cli_transparent.rs
tests/common/: mod.rs
