[package]
name = "pixa"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "Fast image processing CLI: compress, resize, convert, split sprite sheets, generate favicons, and remove Gemini AI watermarks. One command for AI-image-to-web optimization."
repository = "https://github.com/techarm/pixa"
homepage = "https://github.com/techarm/pixa"
documentation = "https://github.com/techarm/pixa#readme"
readme = "README.md"
keywords = ["image", "cli", "compress", "webp", "favicon"]
categories = ["command-line-utilities", "multimedia::images"]
authors = ["techarm"]
include = [
    "src/**/*.rs",
    "assets/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]

[[bin]]
name = "pixa"
path = "src/main.rs"

[lib]
name = "pixa"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
image = "0.25"
oxipng = "9"
mozjpeg = "0.10"
webp = "0.3"
fast_image_resize = "5"
kamadak-exif = "0.5"
sha2 = "0.10"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"

[dev-dependencies]
tempfile = "3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
