[package]
name = "pixa-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "pixa"
path = "src/main.rs"

[dependencies]
pixa-core = { path = "../core" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
