[package]
name = "pixa-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
image = "0.25"
oxipng = "9"
mozjpeg = "0.10"
webp = "0.3"
fast_image_resize = "5"
kamadak-exif = "0.5"
sha2 = "0.10"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
