[package]
name = "pixa-web"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "pixa-web"
path = "src/main.rs"

[dependencies]
pixa-core = { path = "../core" }
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
tempfile = "3"
